# post-training-toolkit

./: README.md  pyproject.toml  requirements.txt
agentrl/: __init__.py  cli.py
demo/: ONE_PAGER.md  PRESENTATION_GUIDE.md  huggingface_demo.ipynb  huggingface_demo.py  real_scenario2_dpo_autostop.py
demo/custom_heuristics/dpo/: loss_variance_high.yaml  margin_too_low.yaml
demo/notebooks/: demo.ipynb  demo_live_output.ipynb  make_demo_notebook.py
demo/outputs/dpo_run/: metrics.jsonl  postmortem.json  run_metadata.json  run_metadata_start.json
demo/outputs/dpo_run/reports/: diagnostics_log_report.md  run_report.md
demo/outputs/full_dpo_run/: metrics.jsonl  postmortem.json  run_metadata.json  run_metadata_start.json
demo/outputs/full_dpo_run/reports/: run_report.md
demo/outputs/real_dpo_run/: metrics.jsonl
demo/outputs/real_dpo_run/checkpoints/checkpoint-16/: rng_state.pth
demo/outputs/real_dpo_run/reports/: metrics_report.md
demo/outputs/test_live_warnings/: metrics.jsonl  run_metadata.json  run_metadata_start.json
demo/scripts/: agent_diagnostics_demo.py  comprehensive_agent_test.py  custom_heuristic_demo.py  full_diagnostics_demo.py  minimal_dpo_demo.py  test_live_warnings.py  trajectory_logger_demo.py
demo_logs/: agent_traces.jsonl  run_001.jsonl
demo_outputs/dpo_run/: diagnostics_log.jsonl  metrics.jsonl  postmortem.json  run_metadata.json
demo_outputs/dpo_run/reports/: diagnostics_log_report.md
demo_outputs/full_dpo_run/: metrics.jsonl  run_metadata.json
demo_outputs/full_dpo_run/reports/: run_report.md
demo_outputs/real_dpo_run/: run_metadata.json
demo_outputs/real_dpo_run/checkpoints/checkpoint-16/: adapter_config.json  adapter_model.safetensors  optimizer.pt  scheduler.pt  trainer_state.json
demo_outputs/test_live_warnings/: metrics.jsonl  run_metadata.json  run_metadata_start.json
docs/: TRL_WALKTHROUGH.md
examples/: agent_diagnostics_demo.py  full_diagnostics_demo.py  minimal_dpo_demo.py  test_live_warnings.py
notebooks/: make_demo_notebook.py
outputs/reports/: grpo_training_log_report.md  synthetic_dpo_log_report.md
post_training_toolkit/: __init__.py  artifacts.py  checkpoints.py  cli.py  diffing.py  postmortem.py  refusal.py  snapshots.py  trackers.py
post_training_toolkit/agents/: __init__.py  converters.py  heuristics.py  loop.py  traces.py  trajectory.py
post_training_toolkit/callbacks/: __init__.py  trl.py
post_training_toolkit/diagnostics/: __init__.py  engine.py  plotting.py
post_training_toolkit/heuristics/: __init__.py  executor.py  inline.py  loader.py  parser.py  schema.py
post_training_toolkit/heuristics/builtin/common/: empty_response.yaml  kl_divergence_high.yaml  repetition_rate.yaml  response_truncation.yaml  reward_variance.yaml
post_training_toolkit/heuristics/builtin/dpo/: logp_gap_collapse.yaml  loss_random.yaml  margin_collapse.yaml
post_training_toolkit/heuristics/builtin/grpo/: group_reward_collapse.yaml  importance_sampling_ratio.yaml  reward_without_quality.yaml
post_training_toolkit/heuristics/builtin/ppo/: clip_fraction_high.yaml  entropy_collapse.yaml  explained_variance_low.yaml  value_head_divergence.yaml
post_training_toolkit/integrations/: __init__.py  trackers.py  trl.py
post_training_toolkit/models/: __init__.py  artifacts.py  checkpoints.py  diffing.py  engine.py  heuristics.py  plotting.py  postmortem.py  snapshots.py  text_analysis.py
post_training_toolkit/models/distributed/: __init__.py  aggregation.py  memory.py  rank.py  straggler.py
post_training_toolkit/models/profiling/: __init__.py  gil.py  gpu.py  step_timer.py  throughput.py
post_training_toolkit/templates/: report_template.md
reports/: diagnostics_log_report.md  run_001_report.md
templates/: report_template.md
tests/: __init__.py  conftest.py  test_agents.py  test_artifacts.py  test_callbacks.py  test_checkpoints.py  test_distributed.py  test_heuristics.py  test_loop.py  test_profiling.py  test_refusal.py  test_snapshots.py  test_text_analysis.py  test_trajectory_logger.py  test_trl_integration.py  test_yaml_heuristics.py
